2005-08-28  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:

	Set default prefs for warn-on-mixed-security pages. Part of bug
	#309088.

2005-08-28  Crispin Flowerday  <gnome@flowerday.cx>

	* embed/ephy-history.c: (ephy_history_class_init),
	(internal_get_host), (ephy_history_get_host),
	(ephy_history_add_host), (ephy_history_add_page), (impl_add_page):
	* embed/ephy-history.h:
	* lib/ephy-marshal.list:

	Add an "add-page" signal to the EphyHistory object that can be
	used to block urls from appearing in the history. 

	Also make the ephy_history_get_host() function not create
	the EphyNode if it doesn't already exist.

2005-08-28  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-notebook.c: (drag_stop), (grab_broken_event_cb),
	(grab_notify_cb), (toplevel_motion_notify_cb),
	(toplevel_button_release_cb), (drag_start), (motion_notify_cb),
	(move_tab_to_another_notebook), (button_release_cb),
	(button_press_cb):

	Fix pointer grab lockup when gecko pops up a dialogue.

2005-08-27  Crispin Flowerday  <gnome@flowerday.cx>

	* configure.ac:
	* embed/mozilla/Makefile.am:

	Add another workaround for the Gentoo header layout, and
	reference the gentoo bug in the configure script

2005-08-27  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* embed/mozilla/EphyBrowser.cpp:
	* embed/mozilla/EphyBrowser.h:
	* embed/mozilla/mozilla-embed.cpp:

	The focus fix isn't needed anymore for gecko >= 1.8.

2005-08-27  Crispin Flowerday  <gnome@flowerday.cx>

	* configure.ac:

	Add in the dom directory to the includes used for
	the configure checks. This is to help Gentoo, which
	uses an odd header layout.

2005-08-26  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c: (ephy_window_delete_event):

	Fix compile warnings.

2005-08-26  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:

	Disable keyword searches by default. From bug #158486.

2005-08-25  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
