@@ -776,10 +776,10 @@ window_cmd_help_about (GtkAction *action,
 	};
 
 	gtk_show_about_dialog (GTK_WINDOW (window),
-			       "name", _("Epiphany Web Browser"),
+			       "name", _("Web Browser"),
 			       "version", VERSION,
 			       "copyright", "Copyright © 2002-2004 Marco Pesenti Gritti\n"
-					    "Copyright © 2003-2005 The Epiphany Developers",
+					    "Copyright © 2003-2005 The GNOME Web Browser Developers",
 			       "authors", authors,
 			       "documenters", documenters,
 				/* Translators: This is a special message that shouldn't be translated
