@@ -1,5 +1,11 @@
 2005-08-28  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/window-commands.c: (window_cmd_help_about):
+
+	Update credits.
+
+2005-08-28  Christian Persch  <chpe@cvs.gnome.org>
+
 	* data/default-prefs-common.js:
 
 	Set default prefs for warn-on-mixed-security pages. Part of bug
